# python-101

./: .gitignore  README.md
intro/: main.py  pyproject.toml
intro/app/: routers.py
intro/app/functions/: converters.py
intro/app/models/: schemas.py
products/: Dockerfile  docker-compose.yml  pyproject.toml
products/app/: main.py
products/app/data/: connection.py  models.py
products/app/migrations/: env.py
products/app/migrations/versions/: 9bb4f22420a0_add_products_table.py  abd495c87e88_add_slug_column_to_products_table.py  abe4637d22c0_add_categories_table.py  da84f0b7a5ba_add_users_table.py
products/app/routes/: category_routes.py  dependencies.py  product_routes.py  user_routes.py
products/app/schemas/: base.py  category.py  product.py  user.py
products/app/use_cases/: category.py  mappers.py  product.py  user.py
products/test/: conftest.py
products/test/routes/: test_category_routes.py
products/test/schemas/: test_category_schema.py
products/test/use_cases/: test_category_usecases.py
